# cerealise

./: .gitignore  CMakeLists.txt  README.md  format.sh
include/: userial.hpp
include/cerealise/: array.hpp  cerealise.hpp  optional.hpp  string.hpp  variant.hpp  vector.hpp
include/userial/: userial.hpp  variant.hpp
test/: CMakeLists.txt  array.cpp  builtins.cpp  custom.cpp  example.cpp  optional.cpp  string.cpp  utils.hpp  variant.cpp  vector.cpp
